# llvm-project

./: anagram_base_noinline.ll  anagram_base_original.ll  red.c  red.cpp  test_red.cpp  uds_static_V2.c
clang-tools-extra/: CMakeLists.txt
clang-tools-extra/clang-ast-ir/: ASTIR.cpp  CMakeLists.txt
clang/docs/: OpenMPSupport.rst
clang/lib/AST/: ASTContext.cpp  AttrImpl.cpp  CMakeLists.txt  Decl.cpp  Expr.cpp  ExprConstant.cpp  ItaniumMangle.cpp  OpenMPClause.cpp  StmtOpenMP.cpp  StmtProfile.cpp
clang/lib/Basic/: IdentifierTable.cpp  OpenMPKinds.cpp  TargetInfo.cpp
clang/lib/CodeGen/: BackendUtil.cpp  CGBuiltin.cpp  CGCUDANV.cpp  CGCall.cpp  CGDecl.cpp  CGExpr.cpp  CGExprCXX.cpp  CGGPUBuiltin.cpp  CGOpenMPRuntime.cpp  CGOpenMPRuntime.h  CGOpenMPRuntimeGPU.cpp  CGOpenMPRuntimeGPU.h  CGOpenMPRuntimeNVPTX.cpp  CGOpenMPRuntimeNVPTX.h  CGOpenMPRuntimeTRegion.cpp  CGOpenMPRuntimeTRegion.h  CGOpenMPRuntimeTarget.cpp  CGOpenMPRuntimeTarget.h  CGStmt.cpp  CGStmtOpenMP.cpp  CMakeLists.txt  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp  CodeGenModule.h  ModuleBuilder.cpp
clang/lib/Driver/: Driver.cpp  ToolChain.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/Headers/: CMakeLists.txt  __clang_cuda_cmath.h  __clang_cuda_complex_builtins.h  __clang_cuda_device_functions.h  __clang_cuda_intrinsics.h  __clang_cuda_math.h  __clang_cuda_math_forward_declares.h  __clang_hip_math.h
clang/lib/Lex/: Lexer.cpp
clang/lib/Parse/: CMakeLists.txt  ParseDecl.cpp  ParseOpenMP.cpp
clang/lib/Sema/: CMakeLists.txt  Sema.cpp  SemaCUDA.cpp  SemaDecl.cpp  SemaDeclAttr.cpp  SemaDeclCXX.cpp  SemaExpr.cpp  SemaLookup.cpp  SemaOpenMP.cpp  SemaOverload.cpp  SemaTemplate.cpp  SemaTemplateInstantiateDecl.cpp  SemaType.cpp  TreeTransform.h
clang/lib/Serialization/: ASTReader.cpp  ASTReaderDecl.cpp  ASTWriter.cpp  ASTWriterStmt.cpp
clang/test/AST/: ast-dump-openmp-begin-declare-variant.c  ast-dump-openmp-begin-declare-variant_13.c  ast-dump-openmp-begin-declare-variant_nested.c
clang/test/CodeGen/: alloc-align-attr.c
clang/test/Driver/: embed-bitcode-nvptx.cu  openmp-offload-gpu.c
clang/test/OpenMP/: allocate_codegen.cpp  amdgcn_target_codegen.cpp  amdgcn_target_global_constructor.cpp  assumes_codegen.cpp  assumes_include_nvptx.cpp  barrier_codegen.cpp  begin_declare_variant_codegen.cpp  begin_declare_variant_nested_propagation.c  cancel_codegen.cpp  declare_target_codegen.cpp  declare_target_codegen_globalization.cpp  declare_target_messages.cpp  declare_variant_ast_print.c  declare_variant_ast_print.cpp  declare_variant_device_kind_codegen.cpp  declare_variant_implementation_vendor_codegen.cpp  declare_variant_messages.c  declare_variant_messages.cpp  declare_variant_mixed_codegen.cpp  distribute_firstprivate_codegen.cpp  distribute_lastprivate_codegen.cpp  distribute_parallel_for_lastprivate_codegen.cpp  distribute_parallel_for_num_threads_codegen.cpp  distribute_parallel_for_private_codegen.cpp  distribute_parallel_for_simd_lastprivate_codegen.cpp  distribute_parallel_for_simd_private_codegen.cpp  distribute_parallel_for_simd_proc_bind_codegen.cpp  distribute_private_codegen.cpp  distribute_simd_firstprivate_codegen.cpp  distribute_simd_lastprivate_codegen.cpp  distribute_simd_private_codegen.cpp  distribute_simd_reduction_codegen.cpp  for_firstprivate_codegen.cpp  for_lastprivate_codegen.cpp  for_linear_codegen.cpp  for_private_codegen.cpp  for_reduction_codegen.cpp  math_codegen.cpp  (+108 more)
lld/ELF/: LTO.cpp
llvm/docs/: CodeReview.rst  LangRef.rst
llvm/utils/: update_cc_test_checks.py  update_mir_test_checks.py  update_test_checks.py
offload/DeviceRTL/: CMakeLists.txt
offload/include/: device.h
offload/src/: CMakeLists.txt  PluginManager.cpp  device.cpp  omptarget.cpp
offload/src/Kernels/: Sanitizer.cpp
offload/src/OpenMP/: API.cpp  Mapping.cpp
offload/test/: lit.cfg
openmp/libomptarget/: CMakeLists.txt
openmp/runtime/: CMakeLists.txt
(+858 files in other folders)
